--- a/magento2/package.json
+++ b/magento2/package.json
@@ -54,6 +54,7 @@
     "@magento/pwa-theme-venia": "~1.1.0",
     "@magento/upward-security-headers": "~1.0.5",
     "@magento/venia-ui": "~9.1.0",
+    "@mumtaz/hello-world": "file:../@mumtaz/hello-world",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.1",
     "@storybook/react": "~6.3.7",
     "@types/node": "16",
