--- a/magento2/package.json
+++ b/magento2/package.json
@@ -31,6 +31,9 @@
     "@fooman/venia-ui-override-resolver": "^1.0.0-rc.2",
     "@magento/pwa-buildpack": "~11.0.0",
     "@magento/venia-sample-payments-checkmo": "~0.0.3",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "glob": "^7.2.0",
+    "lodash-es": "^4.17.21",
     "react-gtm-module": "~2.0.11",
     "react-modal": "^3.14.4"
   },
@@ -46,7 +49,8 @@
     "@babel/plugin-transform-runtime": "~7.4.4",
     "@babel/preset-env": "~7.3.4",
     "@babel/runtime": "~7.4.2",
-    "@extensions/gtm":"file:../@extensions/gtm",
+    "@extensions/gtm": "file:../@extensions/gtm",
+    "@larsroettig/component-targetables": "*",
     "@magento/babel-preset-peregrine": "~1.1.0",
     "@magento/eslint-config": "~1.5.0",
     "@magento/pagebuilder": "~7.0.1",
